--- a/www.nass.gov.ng/8dc803729fd6a483a83e52b7b45aa5ab5b436297.yml
+++ b/www.nass.gov.ng/8dc803729fd6a483a83e52b7b45aa5ab5b436297.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 12:47:25 GMT
+    - Tue, 21 Aug 2018 03:33:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=jSm%2CV2u5M3x7%2CVNPhteNi1; path=/
+    - PHPSESSID=OrFcZe3HXzO%2CwSmp-tQnL1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 12:47:25 GMT
+recorded_at: Tue, 21 Aug 2018 03:33:31 GMT
