--- a/www.nass.gov.ng/03a2d417e121e1a87cbc8cb61de14351c9a81f6d.yml
+++ b/www.nass.gov.ng/03a2d417e121e1a87cbc8cb61de14351c9a81f6d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 13:17:20 GMT
+    - Tue, 21 Aug 2018 03:57:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2C8OMkSgt%2C8TY9bC2z43wl1; path=/
+    - PHPSESSID=JDT6u-7q9FN4cxHOKG%2Cfr2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 13:17:20 GMT
+recorded_at: Tue, 21 Aug 2018 03:57:56 GMT
