--- a/www.nass.gov.ng/e9e88d9651a0d4963003566bf5e3e49420702d72.yml
+++ b/www.nass.gov.ng/e9e88d9651a0d4963003566bf5e3e49420702d72.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 13:28:04 GMT
+    - Tue, 21 Aug 2018 04:07:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=gnLiqiYShGf%2C%2Cfg02gtGZ3; path=/
+    - PHPSESSID=ZkUbx0hxDo3vdXbJ6DSA41; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 13:28:04 GMT
+recorded_at: Tue, 21 Aug 2018 04:07:29 GMT
