--- a/www.nass.gov.ng/f3fccfd7b16a0b15ea5c6a69e899ff832ce5e903.yml
+++ b/www.nass.gov.ng/f3fccfd7b16a0b15ea5c6a69e899ff832ce5e903.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 13:36:20 GMT
+    - Tue, 21 Aug 2018 04:17:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=nDqv9qv0OeNfHwQ1LhfiW2; path=/
+    - PHPSESSID=q333Vdqa8h2ascdX%2Czd8U1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 13:36:20 GMT
+recorded_at: Tue, 21 Aug 2018 04:17:12 GMT
