--- a/www.nass.gov.ng/170a19f4bee6f300aa90fd56a9d454774603ad05.yml
+++ b/www.nass.gov.ng/170a19f4bee6f300aa90fd56a9d454774603ad05.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 13:43:12 GMT
+    - Tue, 21 Aug 2018 04:25:15 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=--l%2Cj5QAYKeV5uRr-WM%2CQ0; path=/
+    - PHPSESSID=aQpad3eNFOv9BxGSK-UuL0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 13:43:12 GMT
+recorded_at: Tue, 21 Aug 2018 04:25:18 GMT
