--- a/www.nass.gov.ng/96b28f6b0a4bf463c4457f5424c10dfc6b655a2a.yml
+++ b/www.nass.gov.ng/96b28f6b0a4bf463c4457f5424c10dfc6b655a2a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 13:48:57 GMT
+    - Tue, 21 Aug 2018 04:31:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ry4FOzF%2Cbcn%2CSG0ZJG4%2CD1; path=/
+    - PHPSESSID=pWhWm6NAUPfrqz0SkCCjL0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 13:48:57 GMT
+recorded_at: Tue, 21 Aug 2018 04:31:12 GMT
