--- a/www.nass.gov.ng/6b69581123949765e5892bf63df8e6018e24c60c.yml
+++ b/www.nass.gov.ng/6b69581123949765e5892bf63df8e6018e24c60c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 13:49:42 GMT
+    - Tue, 21 Aug 2018 04:32:23 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=KOx8CDPOFFpO5VLfLzbIe0; path=/
+    - PHPSESSID=u6XUq%2C7ISU2M8Vc7T2EZX2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 13:49:42 GMT
+recorded_at: Tue, 21 Aug 2018 04:32:23 GMT
