--- a/www.nass.gov.ng/cdd1b60ad38288ff55c244ffe5b0b2f080b3e9eb.yml
+++ b/www.nass.gov.ng/cdd1b60ad38288ff55c244ffe5b0b2f080b3e9eb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 13:50:29 GMT
+    - Tue, 21 Aug 2018 04:34:05 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=LKZTRP7w%2CwYB%2Cwz-rbL6Z1; path=/
+    - PHPSESSID=ZvLGzqWhdpAfJC2pFlK9A3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 13:50:29 GMT
+recorded_at: Tue, 21 Aug 2018 04:34:06 GMT
