--- a/www.nass.gov.ng/74d2b162bdaf3e0d3bb34230c493c4cd2e92a87b.yml
+++ b/www.nass.gov.ng/74d2b162bdaf3e0d3bb34230c493c4cd2e92a87b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 13:53:33 GMT
+    - Tue, 21 Aug 2018 04:36:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=awco3m1sGDk72v-JW22VS3; path=/
+    - PHPSESSID=M9tbD5aL1YgdPRN%2C4WQr53; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 13:53:33 GMT
+recorded_at: Tue, 21 Aug 2018 04:36:49 GMT
