--- a/www.nass.gov.ng/384c690ac94c02bbdb7c46de0da33b60eff1edb2.yml
+++ b/www.nass.gov.ng/384c690ac94c02bbdb7c46de0da33b60eff1edb2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 14:42:47 GMT
+    - Tue, 21 Aug 2018 05:25:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Se963gHOWVslp0FwQEEL62; path=/
+    - PHPSESSID=cmE34dQSbUssxA%2CX5hb-S1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 14:42:48 GMT
+recorded_at: Tue, 21 Aug 2018 05:25:21 GMT
