--- a/www.nass.gov.ng/f9b74161cefbb16526b1ba09a715bf2792c977f1.yml
+++ b/www.nass.gov.ng/f9b74161cefbb16526b1ba09a715bf2792c977f1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 14:46:37 GMT
+    - Tue, 21 Aug 2018 05:29:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=XyplhS7bxWb7RZNsapy%2Cl1; path=/
+    - PHPSESSID=U8uVgcte145z8iqMC0XYC1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 14:46:37 GMT
+recorded_at: Tue, 21 Aug 2018 05:29:33 GMT
