--- a/www.nass.gov.ng/1879706454c48de1447567fc6de3e1663608790b.yml
+++ b/www.nass.gov.ng/1879706454c48de1447567fc6de3e1663608790b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 14:51:05 GMT
+    - Tue, 21 Aug 2018 05:33:20 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=-U7fcsBg2s-AoVxyCo%2Cg23; path=/
+    - PHPSESSID=nm67aJeopxC0spROI-etS3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 14:51:05 GMT
+recorded_at: Tue, 21 Aug 2018 05:33:20 GMT
