--- a/www.nass.gov.ng/7a3abc9e1b140d7739a1e62b8bf330973e02bf7d.yml
+++ b/www.nass.gov.ng/7a3abc9e1b140d7739a1e62b8bf330973e02bf7d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 15:08:48 GMT
+    - Tue, 21 Aug 2018 05:48:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=J74bkMZVGC%2CyW3FulmUm70; path=/
+    - PHPSESSID=DfRjGlEubZ-i5Yv8ViTF40; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 15:08:48 GMT
+recorded_at: Tue, 21 Aug 2018 05:48:12 GMT
