--- a/www.nass.gov.ng/74fac3b9f6d4235a200c39295213a1050f6e2374.yml
+++ b/www.nass.gov.ng/74fac3b9f6d4235a200c39295213a1050f6e2374.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 15:16:04 GMT
+    - Tue, 21 Aug 2018 05:58:15 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=C5U633rk-6Tb41BvTk8SG0; path=/
+    - PHPSESSID=-cfcZ2sds%2CXHqiCFPJ1-W1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 15:16:04 GMT
+recorded_at: Tue, 21 Aug 2018 05:58:16 GMT
