--- a/www.nass.gov.ng/8a27af1a9d423355f5db8f5be9675c38fbcd59b9.yml
+++ b/www.nass.gov.ng/8a27af1a9d423355f5db8f5be9675c38fbcd59b9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 15:27:57 GMT
+    - Tue, 21 Aug 2018 06:10:42 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=UCtr2k6Fow6DqFpZ8%2CtMK1; path=/
+    - PHPSESSID=71htGD7nparpJsXObSVad3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 15:27:57 GMT
+recorded_at: Tue, 21 Aug 2018 06:10:45 GMT
