--- a/www.nass.gov.ng/65148814874b99b1499a9d53f19b01290107f236.yml
+++ b/www.nass.gov.ng/65148814874b99b1499a9d53f19b01290107f236.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 15:29:30 GMT
+    - Tue, 21 Aug 2018 06:12:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=-8QQ7N6TXxS4z0gg9bIMO2; path=/
+    - PHPSESSID=Hxf2wLztyhg9gp9kX-%2Clr3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 15:29:31 GMT
+recorded_at: Tue, 21 Aug 2018 06:12:35 GMT
