--- a/www.nass.gov.ng/09f3ec474604b1abfdbf95773b652031c2a80943.yml
+++ b/www.nass.gov.ng/09f3ec474604b1abfdbf95773b652031c2a80943.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 20 Aug 2018 21:33:25 GMT
+    - Tue, 21 Aug 2018 17:01:05 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=kXuggbDM24sowPXefOxys0; path=/
+    - PHPSESSID=IHaYJq1MSG6Q0mSKUb%2CeK0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 20 Aug 2018 21:33:25 GMT
+recorded_at: Tue, 21 Aug 2018 17:01:05 GMT
