--- a/www.nass.gov.ng/7bb83496f9eed507ed72a47ef8be788047cf1904.yml
+++ b/www.nass.gov.ng/7bb83496f9eed507ed72a47ef8be788047cf1904.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 20 Aug 2018 21:40:42 GMT
+    - Tue, 21 Aug 2018 17:08:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=UXh7Cvp%2C8iGqc3LjVxgBv2; path=/
+    - PHPSESSID=xa8R6cqbSZYQlmgql7nVS3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 20 Aug 2018 21:40:42 GMT
+recorded_at: Tue, 21 Aug 2018 17:08:26 GMT
