--- a/www.nass.gov.ng/cf58e2e74174d6b9dec472dda079e6dc09ebc9a2.yml
+++ b/www.nass.gov.ng/cf58e2e74174d6b9dec472dda079e6dc09ebc9a2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 20 Aug 2018 21:50:13 GMT
+    - Tue, 21 Aug 2018 17:16:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=87sB8mgksxP-ic0PUPVtB2; path=/
+    - PHPSESSID=DF%2CsFX-bhbqVKgUbcpIxW3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 20 Aug 2018 21:50:13 GMT
+recorded_at: Tue, 21 Aug 2018 17:16:28 GMT
