--- a/www.nass.gov.ng/1c2d95329d2716f9b0f7a3851c246b13bd23e8ce.yml
+++ b/www.nass.gov.ng/1c2d95329d2716f9b0f7a3851c246b13bd23e8ce.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 20 Aug 2018 21:55:06 GMT
+    - Tue, 21 Aug 2018 17:22:06 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2C7SjPs64Nja7hQrsWDPOr2; path=/
+    - PHPSESSID=d3uVvy%2Cz7t2rIXY1GFYb41; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 20 Aug 2018 21:55:06 GMT
+recorded_at: Tue, 21 Aug 2018 17:22:07 GMT
