--- a/www.nass.gov.ng/4897fb89305863290e72c07499992108daaa2803.yml
+++ b/www.nass.gov.ng/4897fb89305863290e72c07499992108daaa2803.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 20 Aug 2018 22:03:43 GMT
+    - Tue, 21 Aug 2018 17:29:42 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=JX-IO%2C3Do2QdUryYZz%2CzI2; path=/
+    - PHPSESSID=NYV3EMzMoABVsmyjeaAbq3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 20 Aug 2018 22:03:43 GMT
+recorded_at: Tue, 21 Aug 2018 17:29:42 GMT
