--- a/www.nass.gov.ng/344e5756757d45943824292ba6d2542fb0fe5d32.yml
+++ b/www.nass.gov.ng/344e5756757d45943824292ba6d2542fb0fe5d32.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 20 Aug 2018 22:15:49 GMT
+    - Tue, 21 Aug 2018 17:40:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=E-yC0yd7oXGI5VqGvRqt83; path=/
+    - PHPSESSID=uuh8QsZtlQMKjsh%2CsKBXd2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 20 Aug 2018 22:15:50 GMT
+recorded_at: Tue, 21 Aug 2018 17:40:05 GMT
