--- a/www.nass.gov.ng/7cb0d0807671276c5c4689a9e0d3600d8de2380d.yml
+++ b/www.nass.gov.ng/7cb0d0807671276c5c4689a9e0d3600d8de2380d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 20 Aug 2018 22:20:28 GMT
+    - Tue, 21 Aug 2018 17:45:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=xEiMFtJVgh8QafJ3fNna%2C2; path=/
+    - PHPSESSID=rivqttop1JiKKjQYcA2Dc3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 20 Aug 2018 22:20:28 GMT
+recorded_at: Tue, 21 Aug 2018 17:45:56 GMT
